style: avoid extra padding at the bottom tab bar

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -81,8 +81,8 @@ body {
   bottom: 0;
   left: 0;
   right: 0;
-  height: calc(var(--tabbar-height) + var(--safe-area-bottom));
-  padding-bottom: var(--safe-area-bottom);
+  height: calc(var(--tabbar-height));
+  padding-bottom: 0;
   display: flex;
   align-items: center;
   justify-content: space-around;
